<resources>
    <string name="app_name" translatable="false">Quizator</string>
    <string name="site_address" translatable="false">http://lukasz3.eradon.pl/g5/</string>
    <string name="ads_banner_main_id" translatable="false">ca-app-pub-9635712631261774/2875827085</string>
    <string name="ads_reward_main_id" translatable="false">ca-app-pub-9635712631261774/7436762896</string>
    <string name="ads_reward_full_screen" translatable="false">ca-app-pub-9635712631261774/4888378765</string>
    <string name="points_shortcut" translatable="false">pkt</string>
    <string name="need">Need</string>

    <string name="about_app">About app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password  is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_text_field">Invalid data in text field</string>
    <string name="title_activity_main">My Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="about_application">About application</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="retype_password">Retype password</string>
    <string name="create_new_account">Create new account</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="username">Username</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="email_or_username">Email or Username</string>
    <string name="title_activity_get_question">Get Question</string>
    <string name="empty">None</string>
    <string name="percent_of_lvl_complete">Percent of lvl complete</string>
    <string name="login">Logged</string>
    <string name="lvl">Level</string>
    <string name="points">Points</string>
    <string name="next_lvl_is">Next level is:</string>
    <string name="need_points">Need points:</string>
    <string name="get_question">Get question</string>
    <string name="log_out">Logout</string>
    <string name="close">close</string>
    <string name="ad_failed_to_load">Connection Error or you just exceeded daily limit</string>
    <string name="skip_lock">Skip lock</string>
    <string name="connection_error">Connection error</string>
    <string name="hold_for_answer">Hold for send answer</string>
    <string name="question_error_daily_lock">Come back tomorrow</string>
    <string name="question_error_no_more_questions">There is no more questions</string>
    <string name="question_error">Error when trying to download question</string>
    <string name="error">Error</string>
    <string name="account_created_info">Account has been created, now you can log in</string>
    <string name="utilities">Utilities</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="show_video">"Open Video"</string>
    <string name="previous_lvl">Previous\nlvl</string>
    <string name="add_new_question">Add new question</string>
    <string name="remember_me">Remember me</string>
    <string name="error_when_downloading">Error when downloading data</string>
    <string name="info_password_was_send">Password was sent to you E-mail address</string>
    <string name="info_account_doesnt_exist">Account doesn\'t exist</string>
    <string name="info_incorrect_account">Incorrect account</string>
    <string name="info_now_you_can_answer">Now you can answer again</string>
    <string name="you_got">You got</string>
    <string name="coming_soon">Coming soon</string>
    <string name="to_win">To win</string>
    <string name="x">X</string>
    <string name="base">Base</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="road_adventure">Adventure road</string>
    <string name="rank">Ranks</string>
    <string name="position">Position</string>
    <string name="display_name">Display name</string>
    <string name="a" translatable="false">a)</string>
    <string name="b" translatable="false">b)</string>
    <string name="c" translatable="false">c)</string>
    <string name="d" translatable="false">d)</string>
    <string name="category">Category</string>
    <string name="question_content">Question content</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="pick_correct_answer">Pick correct answer</string>
    <string name="add">Add</string>
    <string name="show_menu">Show menu</string>
    <string name="refresh_profile">Refresh profile</string>

</resources>
