<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/base">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quest"
            android:icon="@mipmap/ic_question_answer_black_24dp"
            android:title="@string/get_question" />

        <item
            android:id="@+id/nav_add_quest"
            android:icon="@mipmap/ic_note_add_black_24dp"
            android:title="@string/add_new_question" />

    </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@mipmap/ic_person_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_progress_road"
                android:icon="@mipmap/ic_gesture_black_24dp"
                android:title="@string/road_adventure" />
            <item
                android:id="@+id/nav_user_rank"
                android:icon="@mipmap/ic_format_list_numbered_black_24dp"
                android:title="@string/rank" />
        </menu>
    </item>

    <item android:title="@string/utilities">
        <menu>
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@mipmap/ic_star_rate_black_18dp"
                android:title="@string/rate_this_app" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_account_box_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
