<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:drawable/alert_light_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/empty" />

        <TextView
            android:id="@+id/user_current_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/some_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_of_lvl_complete"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background_normal">

            <ProgressBar
                android:id="@+id/progress_lvl"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:indeterminateOnly="false"
                android:max="100"
                android:progressDrawable="@drawable/circle_progress"
                android:rotation="-90"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/progress_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/cell_padding"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="84dp" />

            <TextView
                android:id="@+id/user_previous_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/progress_lvl"
                android:layout_toStartOf="@+id/progress_lvl"
                android:text="@string/empty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_next_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/progress_lvl"
                android:layout_toRightOf="@+id/progress_lvl"
                android:text="@string/empty"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:drawable/edit_text"
                android:text="@string/previous_lvl"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/rank_points_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/edit_text"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="12sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/skip_lock_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/skip_lock" />

        <Button
            android:id="@+id/get_question_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/get_question" />

    </LinearLayout>


</ScrollView>
